--- a/wireguard/templates/service.yaml
+++ b/wireguard/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wireguard 
-  namespace: {{ .Values.metadata.namespace }} 
+  name: {{ default "wireguard" .Values.metadata.name }} 
+  namespace: {{ default "vpn" .Values.metadata.namespace }} 
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ default "NodePort" .Values.service.type }}
   selector:
-    name: wireguard
+    name: {{ default "wireguard" .Values.metadata.name }} 
   ports:
-  - name: wireguard
-    nodePort: {{ .Values.service.nodePort }}
+  - name: {{ default "wireguard" .Values.metadata.name }} 
+    nodePort: {{ default "31313" .Values.service.nodePort }}
     port: 51820
     protocol: UDP
     targetPort: 51820 
